# omnivoice.cpp

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
docs/: ARCHITECTURE.md
src/: audio-io.h  audio-postproc-stream.h  backend.h  bpe.h  dac-decoder.h  dac-encoder.h  debug.h  duration-estimator.h  gguf-weights.h  maskgit-tts.h  omnivoice.cpp  omnivoice.h  ov-error.h  pipeline-codec.cpp  pipeline-tts.cpp  pipeline-tts.h  prompt-tts.h  qwen3-enc.h  rvq-codec.h  semantic-enc.h  text-chunker-stream.h
tests/: abi-c.c  cross-decode.py  debug-clone-cossim.py  debug-tts-cossim.py
tools/: omnivoice-codec.cpp  omnivoice-tts.cpp  quantize.cpp
